This will commit style issues and spacing

--- a/css/main.css
+++ b/css/main.css
@@ -1,41 +1,41 @@
 html {
   background-color: #f2f1ed;
-  font-family:"Georgia",serif;
+  font-family: Georgia, serif;
   line-height: 1.5;
 }
 
-img{
-width:100%;
+img {
+  width: 100%;
 }
 
-h1,h2{
-  color:#5d8432;
+h1, h2 {
+  color: #5d8432;
   text-transform:uppercase;
 }
 
-figcaption{
+figcaption {
   font-style: italic;
   text-align: center;
   font-size: .75rem;
 }
 
-nav{
+nav {
   font-weight: bold;
   font-size: 1.125rem;
 }
 
-a:link{
-  color:#793284;
+a:link {
+  color: #793284;
 }
 
-a:hover{
-  color:#b42885;
+a:hover {
+  color: #b42885;
 }
 
-h1,h2,a{
-  font-family: 'Patua One', cursive;
+h1, h2, a {
+  font-family: "Patua One", cursive;
 }
 
-.hadro{
+.hadro {
   font-size: 1.5rem;
 }
